--- a/rocketmq-consumer/src/main/resources/application.yml
+++ b/rocketmq-consumer/src/main/resources/application.yml
@@ -2,7 +2,8 @@ server:
   port: 8082
 
 rocketmq:
-  name-server: 192.168.166.20:9876;192.168.166.206:9876
+  name-server: 192.168.2.35:9876;192.168.2.181:9876
 
 test:
   topic: send-test
+  group: consumer-group-test
